--- a/diplom/index.html
+++ b/diplom/index.html
@@ -99,51 +99,45 @@
         </div>
     </section>
     <section>
+      <header class="about-header">
         <h2>About Us</h2>
         <p>Proin iaculis purus consequat sem cure.</p>
+      </header>
         <div class="wrapper">
             <div class="vert_line"></div>
             <div class="about left">
-                <div>
-                    <div class="roundpic right" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about01.jpg"></div>
-                    <h2>July 2010</h2>
-                    <h3>Our Humble Beginnings</h3>
-                    <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
-                </div>
+                <div class="roundpic right" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about01.jpg"></div>
+                <h2>July 2010</h2>
+                <h3>Our Humble Beginnings</h3>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
             </div>
         </div>
         <div class="wrapper">
             <div class="about right">
-                <div>
-                    <div class="roundpic left" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about02.jpg"></div>
-                    <h2>January 2011</h2>
-                    <h3>Facing Startup Battles</h3>
-                    <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
-                </div>
+                <div class="roundpic left" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about02.jpg"></div>
+                <h2>January 2011</h2>
+                <h3>Facing Startup Battles</h3>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
             </div>
         </div>
         <div class="wrapper">
             <div class="about left">
-                <div>
-                    <div id="third_round" class="roundpic right" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about03.jpg"></div>
-                    <h2>December 2012</h2>
-                    <h3>Enter The Dark Days</h3>
-                    <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
-                </div>
+                <div id="third_round" class="roundpic right" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about03.jpg"></div>
+                <h2>December 2012</h2>
+                <h3>Enter The Dark Days</h3>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
             </div>
         </div>
         <div class="wrapper">
             <div class="about right">
-                <div>
-                    <div class="roundpic left" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about04.jpg"></div>
-                    <h2>february 2014</h2>
-                    <h3>Our Triumph</h3>
-                    <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
-                </div>
+                <div class="roundpic left" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about04.jpg"></div>
+                <h2>february 2014</h2>
+                <h3>Our Triumph</h3>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
             </div>
         </div>
         <div class="wrapper">
-          <div class="roundpic last">Our Story Continues ...</div>
+            <div class="roundpic last">Our Story Continues ...</div>
         </div>
     </section>
     <section class="container_team">
