--- a/diplom/index1.html
+++ b/diplom/index1.html
@@ -194,13 +194,13 @@
           <h4>Coder</h4>
           <div>
             <a href="#">
-              <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+              <div class="socicon twitter"></div>
             </a>
             <a href="#">
-              <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+              <div class="socicon fb"></div>
             </a>
             <a href="#">
-              <div class="socicon gp" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+              <div class="socicon gp"></div>
             </a>
           </div>
         </div>
@@ -209,10 +209,10 @@
           <h3>Uku Mason</h3>
           <h4>Graphic Designer</h4>
           <a href="#">
-            <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+            <div class="socicon fb"></div>
           </a>
           <a href="#">
-            <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+            <div class="socicon pint"></div>
           </a>
         </div>
       </main>
