--- a/diplom/index.html
+++ b/diplom/index.html
@@ -99,10 +99,10 @@
         </div>
     </section>
     <section>
-      <header class="about-header">
-        <h2>About Us</h2>
-        <p>Proin iaculis purus consequat sem cure.</p>
-      </header>
+        <header class="about-header">
+            <h2>About Us</h2>
+            <p>Proin iaculis purus consequat sem cure.</p>
+        </header>
         <div class="wrapper">
             <div class="vert_line"></div>
             <div class="about left">
@@ -153,13 +153,13 @@
                     <h4>Marketer</h4>
                     <div>
                         <a href="#">
-                            <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png)"></div>
+                            <div class="socicon twitter"></div>
                         </a>
                         <a href="#">
-                            <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png)"></div>
+                            <div class="socicon fb"></div>
                         </a>
                         <a href="#">
-                            <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png)"></div>
+                            <div class="socicon pint"></div>
                         </a>
                     </div>
                 </div>
@@ -169,13 +169,13 @@
                     <h4>Coder</h4>
                     <div>
                         <a href="#">
-                            <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                            <div class="socicon twitter"></div>
                         </a>
                         <a href="#">
-                            <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                            <div class="socicon fb"></div>
                         </a>
                         <a href="#">
-                            <div class="socicon gp" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                            <div class="socicon gp"></div>
                         </a>
                     </div>
                 </div>
@@ -184,10 +184,10 @@
                     <h3>Uku Mason</h3>
                     <h4>Graphic Designer</h4>
                     <a href="#">
-                        <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                        <div class="socicon fb"></div>
                     </a>
                     <a href="#">
-                        <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                        <div class="socicon pint"></div>
                     </a>
                 </div>
             </main>
@@ -237,18 +237,10 @@
         <div class="wrapper">
             <div class="footer-copyright">&copy; Copyright 2014 FreebiesXpress.com</div>
             <div class="footer-social">
-                <a href="#">
-                    <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png)"></div>
-                </a>
-                <a href="#">
-                    <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png)"></div>
-                </a>
-                <a href="#">
-                    <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png)"></div>
-                </a>
-                <a href="#">
-                    <div class="socicon gp" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png)"></div>
-                </a>
+                <a href="#"><div class="socicon twitter"></div></a>
+                <a href="#"><div class="socicon fb"></div></a>
+                <a href="#"><div class="socicon pint"></div></a>
+                <a href="#"><div class="socicon gp"></div></a>
             </div>
         </div>
     </footer>
