--- a/diplom/index.html
+++ b/diplom/index.html
@@ -237,10 +237,18 @@
         <div class="wrapper">
             <div class="footer-copyright">&copy; Copyright 2014 FreebiesXpress.com</div>
             <div class="footer-social">
-                <a href="#"><div class="socicon twitter"></div></a>
-                <a href="#"><div class="socicon fb"></div></a>
-                <a href="#"><div class="socicon pint"></div></a>
-                <a href="#"><div class="socicon gp"></div></a>
+                <a href="#">
+                    <div class="socicon twitter"></div>
+                </a>
+                <a href="#">
+                    <div class="socicon fb"></div>
+                </a>
+                <a href="#">
+                    <div class="socicon pint"></div>
+                </a>
+                <a href="#">
+                    <div class="socicon gp"></div>
+                </a>
             </div>
         </div>
     </footer>
