--- a/diplom/index.html
+++ b/diplom/index.html
@@ -27,8 +27,8 @@
     <div class="promo">
         <div class="overlay">
             <div class="promo_text_center">
-                <p>Welcome to our studio!</p>
-                <h1>It's nice to meet you</h1>
+                <p class="promo-subtitle">Welcome to our studio!</p>
+                <h1 class="promo-title">It's nice to meet you</h1>
                 <button class="button">Tell me more</button>
             </div>
         </div>
@@ -100,18 +100,21 @@
     </section>
     <section class="section about">
         <header class="about-header">
-            <h2 class="section-title about-title">About Us</h2>
-            <p class="section-subtitle about-subtitle">Proin iaculis purus consequat sem cure.</p>
+            <div class="wrapper">
+                <h2 class="section-title about-title">About Us</h2>
+                <p class="section-subtitle about-subtitle">Proin iaculis purus consequat sem cure.</p>
+            </div>
         </header>
         <section class="about-main">
             <div class="about-main-item">
                 <div class="wrapper">
                     <div class="about-item left">
                         <div class="roundpic right" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about01.jpg)"></div>
-                        <h2 class="about-title">July 2010</h2>
-                        <h3 class="about-subtitle">Our Humble Beginnings</h3>
-                        <p class="about-item-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.
-                        </p>
+                        <div class="about-item-content-left">
+                            <h2 class="about-title">July 2010</h2>
+                            <h3 class="about-subtitle">Our Humble Beginnings</h3>
+                            <p class="about-item-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -119,10 +122,12 @@
                 <div class="wrapper">
                     <div class="about-item right">
                         <div class="roundpic left" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about02.jpg)"></div>
-                        <h2 class="about-title">January 2011</h2>
-                        <h3 class="about-subtitle">Facing Startup Battles</h3>
-                        <p class="about-item-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.
-                        </p>
+                        <div class="about-item-content-right">
+                            <h2 class="about-title">January 2011</h2>
+                            <h3 class="about-subtitle">Facing Startup Battles</h3>
+                            <p class="about-item-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -130,10 +135,12 @@
                 <div class="wrapper">
                     <div class="about-item left">
                         <div id="third_round" class="roundpic right" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about03.jpg)"></div>
-                        <h2 class="about-title">December 2012</h2>
-                        <h3 class="about-subtitle">Enter The Dark Days</h3>
-                        <p class="about-item-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.
-                        </p>
+                        <div class="about-item-content-left">
+                            <h2 class="about-title">December 2012</h2>
+                            <h3 class="about-subtitle">Enter The Dark Days</h3>
+                            <p class="about-item-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -141,10 +148,12 @@
                 <div class="wrapper">
                     <div class="about-item right">
                         <div class="roundpic left" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about04.jpg)"></div>
-                        <h2 class="about-title">february 2014</h2>
-                        <h3 class="about-subtitle">Our Triumph</h3>
-                        <p class="about-item-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.
-                        </p>
+                        <div class="about-item-content-right">
+                            <h2 class="about-title">february 2014</h2>
+                            <h3 class="about-subtitle">Our Triumph</h3>
+                            <p class="about-item-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
