--- a/diplom/index.html
+++ b/diplom/index.html
@@ -25,12 +25,10 @@
         </div>
     </header>
     <div class="promo">
-        <div class="overlay">
-            <div class="promo_text_center">
-                <p class="promo-subtitle">Welcome to our studio!</p>
-                <h1 class="promo-title">It's nice to meet you</h1>
-                <button class="button">Tell me more</button>
-            </div>
+        <div class="promo-content">
+            <p class="promo-subtitle">welcome to our studio!</p>
+            <h2 class="promo-title">it's nice to meet you</h2>
+            <a href="#" class="promo-button">tell me more</a>
         </div>
     </div>
     <section class="section service">
@@ -125,7 +123,7 @@
                         <div class="about-item-content-right">
                             <h2 class="about-title">January 2011</h2>
                             <h3 class="about-subtitle">Facing Startup Battles</h3>
-                            <p class="about-item-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.
+                            <p class="about-item-text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
                             </p>
                         </div>
                     </div>
@@ -253,7 +251,7 @@
     <section class="section contact">
         <div class="wrapper">
             <header class="contact-header">
-                <h2 class="section-title contact-title">Contact us</h2>
+                <h2 class="section-title contact-title">contact us</h2>
                 <p class="section-subtitle contact-subtitle">Proin iaculis purus consequat sem cure</p>
             </header>
             <main class="contact-main">
@@ -268,7 +266,7 @@
                     </div>
                 </div>
                 <div class="contact-control">
-                    <button tabindex="5" class="button">Send message</button>
+                    <button tabindex="5" class="contact-button">send message</button>
                 </div>
             </main>
         </div>
